<resources>
    <string name="app_name">حوِل درجة الحرارة الى فهرنهايت</string>
    <!-- TODO: Remove or change this placeholder text -->

        <string name="about_fh">مقياس درجة الحرارة فهرنهايت هو مقياس درجة الحرارة المُعتمد على نقطّة تجمّد الماء وهي
    32 درجة مئويّة، ونقطة غليان الماء وتساوي 212 درجة مئويّة، والفرق بين القيمتين السابقتين مقسّمة إلى 180 ج
    زءاً متساوياً، وفي القرن الثامن عشر أخذ العالم الفيزيائيّ الألمانيّ دانيال غابرييل فهرنهايت خليطاً متساوياً من الملح المجمّد
     علىى أنه الصفر لمقياس درجة الحرارة الخاص به، حيث حدّد كل من قيمة 30 درجة مئويّة، و90 درجة مئويّة
     لنقاط درجة حرارة تجمّد الماء ودرجة حرارة الجسم الطبيعيّة على التوالي، ثمّ عُدّلت هذه النقاط إلى 32 درجة م
    طوّر العالم فهرنهايت أول جهاز حديث لقياس درجة الحرارة وهو ميزان الحرارة الزئبقيّ في عام 1714م، وتميّز بأنّه أكثر دقّةً من المقاييس السابقة المُستخدمة لقياس درجات الحرارة، أمّا مقياس الفهرنهايت جاء بعد مقياس درجة الحراة الكحوليّ المُخترع من قِبل العالم الدنماركيّ أولوس رومر، حيث حدد العالم رومر نقطة الصفر على مقياسه كأقل نقطة، ونقطة 60 درجة مئويّة كدرجة غليان الماء، و7.5 كنقطة ذوبان الثلح، و22.5 كنقطة درجة حرارة الجسم.

ئويّة، و96 درجة مئويّة، إلّا أنّ المقياس النهائيّ يحتاج لتعديل القيمة الأخيرة للحجم النهائيّ إلى 98.6 درجة مئويّة.</string>

    //Main Activity
    <string name="conversion_btn">إحسب درجة الحرارة بالفهرنهايت</string>
    <string name="about_btn">عن فهرنهايت</string>

    //Custom Dialog
    <string name="TextView">أدخل درجة الحرارة بالسلسيوس</string>
    <string name="EditText">أدخل درجة الحرارة</string>
    <string name="cancel_btn">الغاء</string>
    <string name="run_btn">إحسب</string>
    <string name="result_tv">0</string>

    //Convert Fragment
    <string name="Dialog_btn">إضغط هنا</string>

</resources>