<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_customdialog"
            android:layout_width="188dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:fontFamily="@font/tajawal"
            android:gravity="center"
            android:text="@string/TextView"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:fontFamily="@font/tajawal"
            android:hint="@string/EditText"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/run_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/tajawal"
            android:text="@string/run_btn"
            android:textColor="#000000" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/tajawal"
            android:text="@string/cancel_btn"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#00FF0000"
        android:fontFamily="@font/tajawal"
        android:gravity="center"
        android:text="@string/result_tv"
        android:textColor="#000000"
        android:textSize="22sp" />
</LinearLayout>